kubectl/webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webapp-webapp
  replicas: 2 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: webapp-webapp
    spec:
      containers:
      - name: webapp
        image: codeurjc/java-webapp-bbdd:v2
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webapp-db
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: webapp-db
    spec:
      containers:
      - name: db
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: webapp-storage
      volumes:
        - name: webapp-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp-webapp
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: webapp-port
  selector:
    app: webapp-webapp
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: webapp-db
spec:
  ports:
    - port: 3306
      name: db-port
  selector:
    app: webapp-db
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: www.myweb.com
    http:
      paths:
      - path: /anuncios(/|$)(.*)
        backend:
          serviceName: webapp
          servicePort: 8080
